--- a/static/scss/partials/_topbar.scss
+++ b/static/scss/partials/_topbar.scss
@@ -5,8 +5,8 @@ $topbar-bg-color: $primary-color;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: 55px;
-$topbar-button-top: rem-calc(12) !default;
+$topbar-height: 45px;
+$topbar-button-top: .12 * $topbar-height !default;
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
